deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-1
  namespace: mynamespace
  labels:
    app: microservice-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-1
  template:
    metadata:
      labels:
        app: microservice-1
    spec:
      containers:
        - name: app
          image: microservice-1:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Never
