service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-1
  namespace: mynamespace
  labels:
    app: microservice-1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: microservice-1
